--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Aaron\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=\\\\studentstore.student.nci.col\\redirection$\\x14111659\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
